--- a/cmd/smoketest-gateway/k8s/kustomization.yaml
+++ b/cmd/smoketest-gateway/k8s/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
-  - 01-service-template.viper.yaml
-  - 02-service-template.yaml
+  - 01-smoketest-gateway.viper.yaml
+  - 02-smoketest-gateway.yaml
   - 03-strip-prefix.yaml
   - 04-traefik-ingress.yaml
   - 05-traefik-vpn-ingress.yaml
