Add api.development.npool.top domain

--- a/cmd/smoketest-gateway/k8s/04-traefik-ingress.yaml
+++ b/cmd/smoketest-gateway/k8s/04-traefik-ingress.yaml
@@ -31,6 +31,8 @@ spec:
       http: *http_rules
     - host: api.ohhash.com
       http: *http_rules
+    - host: api.development.npool.top
+      http: *http_rules
 
 ---
 
@@ -79,4 +81,6 @@ spec:
     - host: api.jh-testing.npool.top
       http: *http_rules
     - host: api.japan-procyon-production.npool.top
+      http: *http_rules
+    - host: api.development.npool.top
       http: *http_rules
