support harbin ingress

--- a/cmd/smoketest-gateway/k8s/04-traefik-ingress.yaml
+++ b/cmd/smoketest-gateway/k8s/04-traefik-ingress.yaml
@@ -152,6 +152,8 @@ spec:
       http: *http_rules
     - host: api.jh-testing.npool.top
       http: *http_rules
+    - host: api.harbin-testing.npool.top
+      http: *http_rules
     - host: api.japan-procyon-production.npool.top
       http: *http_rules
     - host: api.development.npool.top
